# create-your-own-chess-rabbi

./: .gitignore  IMPLEMENTATION.md  LICENSE  README.md  pyproject.toml
docs/: setup-external.md
docs/implementation/: 0-overview.md  1-training-model.md  2-engine-runtime.md  3-data-sources.md  4-training-and-evaluation.md  5-packaging-and-gui.md  6-project-management.md
scripts/: bootstrap-external.sh
src/personal_maia/: __init__.py  cli.py  config.py  status.py
src/personal_maia/data/: ingest.py  split.py
src/personal_maia/engine/: __init__.py  package.py  smoke.py  uci_proxy.py
src/personal_maia/maia/: __init__.py  converter.py  trainer.py
src/personal_maia/sources/: __init__.py  http.py  lichess.py  resolver.py
src/personal_maia/system/: __init__.py  process.py
src/rabbi/: __init__.py  cli.py  config.py  status.py
src/rabbi/data/: __init__.py  ingest.py  pgn.py  split.py
src/rabbi/engine/: package.py  uci_proxy.py
src/rabbi/maia/: converter.py  trainer.py  weights.py
src/rabbi/sources/: chesscom.py  http.py
src/rabbi/system/: doctor.py
tests/: test_build_command.py  test_config.py  test_doctor.py  test_download_urls.py  test_ingest.py  test_maia_adapters.py  test_packaging.py  test_pgn.py  test_process.py  test_smoke.py  test_sources.py  test_split.py  test_status.py  test_weights.py  test_wrapper_smoke.py
