[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "personal-maia"
version = "0.1.0"
description = "Create Your Own Chess Rabbi: local-first tooling for creating personal-style Maia/Lc0 chess engine packages."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "Create Your Own Chess Rabbi contributors" }
]
dependencies = []

[project.optional-dependencies]
tui = ["textual>=0.80"]
dev = ["pytest>=8"]

[project.scripts]
personal-maia = "personal_maia.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
