[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rabbi"
version = "0.1.0"
description = "Rabbi: local-first tooling for creating personal-style Maia/Lc0 chess engine packages."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "Rabbi contributors" }
]
dependencies = []

[project.optional-dependencies]
tui = ["textual>=0.80"]
dev = ["pytest>=8"]

[project.scripts]
rabbi = "rabbi.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
